# Repos

./: README.md
crypto/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  pcg32_example.c  requirements.txt
crypto/go/: aes-cfb.go  aes-gcm.go  aes_cbc-file.go  hmac.go  rsa.go  secure-randno.go  sha-md5.go
dsalgs/searching/: binarysearchiter.c  binarysearchrecur.c  linearsearch.c  ternarysearch.c
dsalgs/sorting/: bubblesort.c  heapsort.c  insertionsort.c  mergesort.c  quicksort.c  selectionsort.c
dsalgs/strings/: boyer_moore_bad_heuristic.cpp  boyer_moore_good_suffix.cpp  finite_automata.cpp  knuth_morris_pratt.cpp  naive_algorithm.cpp
react-native/WeatherApp/: App.js  ProjectDetails.txt  babel.config.js  package-lock.json  package.json
system/: .clang-format  .clangd
system/alignment/: aligned.c  ex00.c  ex02.c  ex03.c  ex05.c  ex06.c  othex07.c
system/allocators/: alloc.cpp  arena.c  buddyalloc.c  freelist.c  marksweepgc.cpp  pool.c  poolallocator.cpp  stack.c
system/arrays/: ex00.c  (+2 more)
system/eliben-concurrency/: pyproject.toml  server-test.py
system/pyasync-app/: async_yieldfrom00.py  async_yieldfrom01.py  async_yieldfrom02.py  async_yieldfrom03.py  asyncio_advanced.py  asyncio_basic.py  asyncio_final.py  asyncio_intermediate.py  pyproject.toml
uireact/React_Django_Sqlite/django_sqlite_backend/: .flake8  pyproject.toml
uireact/React_Django_Sqlite/django_sqlite_backend/DjangoAPI/: settings.py  urls.py
uireact/React_Django_Sqlite/django_sqlite_backend/EmployeeApp/: models.py  serializers.py  urls.py  views.py
uireact/React_Django_Sqlite/django_sqlite_backend/EmployeeApp/migrations/: 0001_initial.py
(+296 files in other folders)
